--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -9,3 +9,14 @@ input {
   display:block;
 }
 
+.navbar {
+  background-color: #168ccc;
+}
+
+.navbar-default .navbar-brand{
+  color: #ffffff;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #ffffff;
+}
